2_demoapp-app1-summer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demoapp-app1-summer"
  namespace: "prod"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demoapp-app1-summer
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demoapp-app1-summer"
              servicePort: 80
